# AiSD2025

./: L0411_161 Makefile  L0411_161.cpp  L0411_161.hpp  L0411_161test.cpp  L335_100.cpp  L336_110.cpp  L33_5101.cpp  SkienAlgsListFinal.xlsx  makefile
L008_001/: L008_001.cpp
L0307_109/: L0307_109.cpp  L0307_109.hpp  L0307_109test.cpp  Makefile
L0309_111/: L0309_111.cpp  L0309_111.hpp  L0309_111test.cpp  Makefile
L0310_111/: L0310_111.cpp  L0310_111.hpp  L0310_111test.cpp  Makefile
L0332_098/: L0332_098.cpp  L0332_098.hpp  L0332_098test.cpp  Makefile
L0333_099/: L0333_099.cpp  L0333_099test.cpp  Makefile
L0334_099/: L0334_099.cpp  L0334_099test.cpp  Makefile
L0335_101/: L0335_101.cpp  makefile.mak
L0336_110/: L0336_110.cpp  makefile.mak
L0401_145/: dfdf  rr
L0411_161/: L0411_161.cpp  L0411_161.hpp  L0411_161test.cpp  Makefile
L0412_162/: L0412_162.cpp  L0412_162.hpp  L0412_162test.cpp  Makefile
L0431_146/: L0431_146.cpp  L0431_146.hpp  L0431_146_Test.cpp  Makefile
L0433_150/: L0433_150.cpp  L0433_150.hpp  L0433_150_Test.cpp  Makefile
L0434_152/: L434_152.cpp  L434_152.hpp  Makefile.mak
L0517_194/: L0517_194.cpp  L0517_194.hpp
L0701_241/: L0701_241.cpp  L0701_241.hpp  L0701_241_test.cpp  Makefile
L0702_242/: L0702_242.cpp  L0702_242.hpp  L0702_242_test.cpp  Makefile
L0703_242/: L0703_242.cpp  L0703_242.hpp  L0703_242_test.cpp  Makefile
L0704_244/: L0704_244.cpp  L0704_244.hpp  Makefile  test_L0704_244.cpp
L0705_244/: L0705_244.cpp  L0705_244.hpp  L705_244.hpp  Makefile  test_L705_244.cpp
L0708_254/: L0708_254.cpp  L0708_254.hpp  L0708_254test.cpp  L0708_254test.txt  Makefile
L0709_254/: L0709_254.cpp  L0709_254.hpp  L0709_254test.cpp  L0709_254test.txt  Makefile
L0714_257/: L0714_257.cpp  L0714_257.hpp  L0714_257test.cpp  Makefile
L0715_259/: L0715_259.cpp  L0715_259test.cpp  Makefile  graph.cpp  test.cpp
L0721_267/: L0721_267.cpp  Makefile
L0723_272/: L0723_272.cpp  L0723_272.hpp  L0723_272test.cpp  Makefile
L0724_273/: L0724_273.cpp  L0724_273.hpp  L0724_273test.cpp  Makefile
L0812_305/: CMakeLists.txt  L0812_305.cpp  L0812_305.h  Makefile  graph.cpp
L0813_313/: L0813_313.cpp  L0813_313.h  L0813_313_Test.cpp  Makefile  flow_graph.cpp  flow_graph.h  main.cpp
L0814_313/: L0814_313.cpp  L0814_313.h  L0814_313_Test.cpp  Makefile
L0886_290/: L0886_290.cpp  L0886_290.hpp  L0886_290test.cpp  Makefile
L0903_329/: L0903_329.cpp  L0903_329.hpp  L0903_329test.cpp  Makefile
L0904_329/: L0904_329.cpp  L0904_329.hpp  L0904_329test.cpp  Makefile
L0905_330/: L0905_330.cpp  L0905_330.hpp  L0905_330test.cpp  Makefile
L0906_331/: L0906_331.cpp  L0906_331.hpp  L0906_331test.cpp  Makefile
L0907_331/: L0907_331.cpp  L0907_331.hpp  L0907_331test.cpp  Makefile  Makefile.txt
L0908_332/: L0908_332.cpp  L0908_332.hpp  L0908_332test.cpp  Makefile
(+104 files in other folders)
